# burrow

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml  deploy.yml  release.yml  tauri-release.yml
cmd/burrow/: main.go
cmd/burrow-server/: main.go
crates/burrow-agent/: Cargo.toml
crates/burrow-agent/src/: main.rs  wireguard.rs
crates/burrow-cli/: Cargo.toml
crates/burrow-cli/src/: main.rs
crates/burrow-core/: Cargo.toml
crates/burrow-core/src/: crypto.rs  error.rs  lib.rs  stun.rs  types.rs
crates/burrow-server/: Cargo.toml
crates/burrow-server/src/: admin_handlers.rs  audit.rs  auth.rs  auth_handlers.rs  db.rs  derp.rs  error_codes.rs  handlers.rs  jobs.rs  lib.rs  lockout.rs  main.rs  metrics.rs  password_check.rs  rate_limit.rs  state.rs  totp.rs  ws.rs
crates/burrow-server/src/email/: mod.rs  service.rs  templates.rs
crates/burrow-server/tests/: api_test.rs
crates/burrow-server/tests/common/: mod.rs
docs/: threat-model.md
embed/: embed.go  landing.html
internal/client/: client.go  client_test.go  daemon.go  daemon_test.go  diagnose.go  tunnel.go  tunnel_test.go
internal/client/killswitch/: darwin.go  killswitch.go  linux.go  windows.go
internal/server/: api.go  api_test.go  auth.go  auth_test.go  config.go  config_fuzz_test.go  config_test.go  dpi_test.go  metrics.go  metrics_test.go  relay_test.go  server.go  tracker.go  tracker_test.go  transport.go  transport_test.go
internal/server/store/: sqlite.go  sqlite_test.go  store.go
internal/shared/: crypto.go  crypto_test.go  invite.go  invite_test.go
monitoring/: prometheus.yml
scripts/: backup.sh  deploy-docker.sh  deploy.sh  dpi-test.sh  install.sh
web/: Dockerfile  README.md  biome.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web/admin/: package-lock.json  package.json  svelte.config.js
web/admin/src/: app.css
web/admin/src/lib/: api.ts  servers.test.ts  servers.ts
web/admin/src/routes/: +layout.svelte  +page.svelte
web/admin/src/routes/clients/: +page.svelte
web/admin/src/routes/invites/: +page.svelte
web/admin/src/routes/login/: +page.svelte
web/admin/src/routes/servers/: +page.svelte
web/admin/src/routes/settings/: +page.svelte
web/client/: package-lock.json  package.json
web/client/src/: app.css  app.html
web/client/src-tauri/: Cargo.toml  tauri.conf.json
web/client/src-tauri/capabilities/: default.json
web/client/src-tauri/src/: lib.rs
web/client/src/lib/: api.ts  i18n.svelte.ts  stores.svelte.ts
web/client/src/routes/: +layout.svelte  +page.svelte
web/client/src/routes/onboarding/: +page.svelte
web/client/src/routes/servers/: +page.svelte
web/client/src/routes/settings/: +page.svelte
web/src/: app.css  app.html
web/src/lib/: api.ts
web/src/lib/components/: Toast.svelte  ToastContainer.svelte
web/src/lib/stores/: auth.ts  notifications.ts  websocket.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/admin/: +layout.svelte  +page.svelte
web/src/routes/admin/audit/: +page.svelte
web/src/routes/admin/networks/: +page.svelte
web/src/routes/admin/users/: +page.svelte
web/src/routes/forgot-password/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/networks/: +page.svelte
web/src/routes/networks/[id]/: +page.svelte
web/src/routes/register/: +page.svelte
web/src/routes/reset-password/: +page.svelte
web/src/routes/settings/: +page.svelte
web/src/routes/verify-email/: +page.svelte
