[workspace]
members = [
    "crates/burrow-server",
    "crates/burrow-agent", 
    "crates/burrow-cli",
    "crates/burrow-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Прянишников Артём Алексеевич <Pryanishnikovartem@gmail.com>"]
repository = "https://github.com/FrankFMY/burrow"
homepage = "https://github.com/FrankFMY/burrow"
keywords = ["vpn", "wireguard", "mesh", "network", "p2p"]
categories = ["network-programming"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
