[package]
name = "burrow-agent"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Burrow agent - runs on each node"

[dependencies]
burrow-core = { path = "../burrow-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
base64 = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = "0.26"
futures-util = "0.3"
dirs = "6"
