[package]
name = "burrow-cli"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Burrow CLI tool"

[[bin]]
name = "burrow"
path = "src/main.rs"

[dependencies]
burrow-core = { path = "../burrow-core" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
hostname = "0.4"
dirs = "6"
rpassword = "7"
