[package]
name = "burrow"
version = "0.1.0"
description = "Burrow VPN Client"
authors = ["FrankFMY"]
edition = "2021"

[lib]
name = "burrow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
